--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -47,13 +47,14 @@ dependencies:
   flutter_riverpod: ^2.6.1 # 상태관리를 위한 패키지
   riverpod_annotation: ^2.6.1
   stomp_dart_client: ^2.1.3
+  image: ^4.5.4
+  flutter_inappwebview: ^6.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   image_picker: ^1.0.7 # 카메라, 앨범에서 사진을 가져오는 패키지
-  flutter_inappwebview: ^6.0.0 # 웹뷰를 사용하기 위한 패키지
   path_provider: ^2.1.2
   build_runner:
   custom_lint:
