--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
+        # service: [music-service]
         service: [auth-service, user-service, verification-service, gateway-service, music-service, discovery-service]
     steps:
       - name: Set up Docker Buildx
@@ -35,9 +36,6 @@ jobs:
 
       - name: Set version tag
         run: echo "VERSION_TAG=$(date +%Y%m%d-%H%M%S)" >> $GITHUB_ENV
-
-      - name: Pull Audiveris image
-        run: docker pull louie8821/audiveris:drum
 
       - name: Docker Hub Login
         uses: docker/login-action@v3
