--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         # service: [music-service]
-        service: [auth-service, user-service, verification-service, gateway-service, music-service, discovery-service]
+        service: [audio-service, auth-service, user-service, verification-service, gateway-service, music-service, discovery-service]
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
