--- a/backend/auth-service/build.gradle
+++ b/backend/auth-service/build.gradle
@@ -26,8 +26,9 @@ dependencies {
     implementation project(':common-redis')
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 test {
