--- a/backend/audio-service/build.gradle
+++ b/backend/audio-service/build.gradle
@@ -26,8 +26,10 @@ dependencies {
     // kafka
     implementation('org.springframework.kafka:spring-kafka')
     // test
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'it.ozimov:embedded-redis:0.7.2'
 }
 
 test {
