--- a/backend/audio-service/build.gradle
+++ b/backend/audio-service/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-websocket")
     // kafka
     implementation('org.springframework.kafka:spring-kafka')
+    // mvc-ui
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
     // test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation platform('org.junit:junit-bom:5.10.0')
