--- a/backend/audio-service/build.gradle
+++ b/backend/audio-service/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'it.ozimov:embedded-redis:0.7.2'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
+    testImplementation 'com.squareup.okhttp3:okhttp:4.10.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
 }
 
 test {
