--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   image: ^4.5.4
   flutter_inappwebview: ^6.0.0
   http_parser: ^4.0.2
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
