--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   http_parser: ^4.0.2
   logger: ^2.5.0
+  flutter_native_splash: ^2.4.6
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -101,6 +104,7 @@ flutter:
     - assets/sounds/metronome_other.wav
     - assets/sounds/test_pattern.wav
     - assets/images/appLogo.png
+    - assets/images/intro_logo.png
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -130,3 +134,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_native_splash:
+  color: "#D97D6C"
+  image: assets/images/intro_logo.png
