--- a/backend/common-auth/build.gradle
+++ b/backend/common-auth/build.gradle
@@ -25,6 +25,11 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     // spring security
     compileOnly 'org.springframework.boot:spring-boot-starter-security'
+    // test
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
 }
 
 test {
