--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
     sdk: flutter
   riverpod_generator: ^2.6.5
   riverpod_lint: ^2.6.5
+  android_intent_plus: ^5.3.0
 
 dev_dependencies:
   flutter_test:
