--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_inappwebview: ^6.0.0
   http_parser: ^4.0.2
   logger: ^2.5.0
+  flutter_native_splash: ^2.4.6
   flutter_localizations:
     sdk: flutter
   riverpod_generator: ^2.6.5
@@ -104,6 +105,7 @@ flutter:
     - assets/images/appLogo.png
     - assets/images/intro_logo.png
     - assets/images/googleLogo.png
+    - assets/images/intro.png
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
