--- a/frontend/flutter_native_splash.yaml
+++ b/frontend/flutter_native_splash.yaml
@@ -10,7 +10,7 @@ flutter_native_splash:
   # of your splash screen to a solid color.  Use background_image to set the background of your
   # splash screen to a png image.  This is useful for gradients. The image will be stretch to the
   # size of the app. Only one parameter can be used, color and background_image cannot both be set.
-  # color: "#D97D6C"
+  color: "#D97D6C"
   background_image: "assets/images/intro.png"
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
@@ -49,10 +49,10 @@ flutter_native_splash:
     # 640 pixels in diameter.
     # App icon without an icon background: This should be 1152×1152 pixels, and fit within a circle
     # 768 pixels in diameter.
-    #image: assets/android12splash.png
+    image: assets/images/intro.png
 
     # Splash screen background color.
-    #color: "#42a5f5"
+    color: "#D97D6C"
 
     # App icon background color.
     #icon_background_color: "#111111"
@@ -118,7 +118,7 @@ flutter_native_splash:
   #       To show the notification bar, add the following code to your Flutter app:
   #       WidgetsFlutterBinding.ensureInitialized();
   #       SystemChrome.setEnabledSystemUIOverlays([SystemUiOverlay.bottom, SystemUiOverlay.top]);
-  #fullscreen: true
+  fullscreen: true
 
   # If you have changed the name(s) of your info.plist file(s), you can specify the filename(s)
   # with the info_plist_files parameter.  Remove only the # characters in the three lines below,
