--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -64,6 +64,16 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   image_picker: ^1.0.7 # 카메라, 앨범에서 사진을 가져오는 패키지
+  build_runner: ^2.4.8
+  flutter_launcher_icons: ^0.14.3
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/images/icon.png"
+  min_sdk_android: 21
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/images/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -106,7 +116,7 @@ flutter:
     - assets/images/appLogo.png
     - assets/images/intro_logo.png
     - assets/images/googleLogo.png
-    - assets/images/intro.png
+    - assets/images/icon.png
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
@@ -136,3 +146,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
