--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -59,8 +59,7 @@ dependencies:
   android_intent_plus: ^5.3.0
   firebase_core: ^2.24.2
   flutter_launcher_icons: ^0.14.3
-
-
+  flutter_markdown: ^0.6.18
 
 dev_dependencies:
   flutter_test:
