--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -67,7 +67,6 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   image_picker: ^1.0.7 # 카메라, 앨범에서 사진을 가져오는 패키지
   build_runner: ^2.4.8
-  
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -90,7 +89,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/default_profile.jpg
-    # - assets/images/drum_kit.jpg
     - assets/web/index.html
     - assets/web/js/opensheetmusicdisplay.min.js
     - assets/web/js/fileSelectAndLoadOSMD.js
@@ -119,9 +117,8 @@ flutter:
     - assets/images/intro_logo.png
     - assets/images/googleLogo.png
     - assets/images/icon.png
-
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    - assets/images/drum_stick.png
+    - assets/images/drum_sheet.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -163,6 +160,3 @@ flutter:
           weight: 700
         - asset: assets/fonts/Pretendard-ExtraBold.otf
           weight: 800
-
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/to/font-from-package
